--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+<link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,300;1,400;1,700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">    <title>React App</title>1
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
